--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
       <div id="back" class="album">
 
-        <h3></h3>
+        <h3>|    FROM DESPICABLE ME 2    |</h3>
 
-        <!-- Level 1 'HAPPY' Header -->
+        <h1>HAPPY' Header</h1>
 
         <!-- Level 3 'WRITTEN BY...' Header -->
 
