Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div id="front" class="album">
         <div id="title-box">
 
-          <h4>'PHARRELL WILLIAMS'</h4>
+          <h4>PHARRELL WILLIAMS</h4>
 
           <h2>HAPPY</h2>
 
@@ -23,7 +23,7 @@
 
         <h3>|    FROM DESPICABLE ME 2    |</h3>
 
-        <h1>HAPPY' Header</h1>
+        <h1>HAPPY</h1>
 
         <h3> WRITTEN BY PHARRELL WILLIAMS</h3>
 
